# mdtrans

./: .gitignore  README.md  changelog.md  pyproject.toml  requirements.txt
doc/: README.FR.md
src/: mdtrans.py  preprocessor.py  translator.py
src/mdtrans.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
